--- a/exercise/index1.html
+++ b/exercise/index1.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>xin chao</h1>   
-    <script src= "index.js" ></script> 
+    <script src= "index1.js"></script>
 </body>
 </html>
