--- a/newsessionhtml/index.html
+++ b/newsessionhtml/index.html
@@ -1,67 +1,20 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bronwbear</title>
-</head>
-<body>
-    <a href="https://c4e-d17.netlify.app/aboutme.html" target="_blank"> Brown Bear About Me</a>
-    <h1> The Brown Bear  </h1> 
-    <ul>
-        <li> <a href="https://c4e-d17.netlify.app/?fbclid=IwAR3DyTE7KCoy2OWXa0boSNJT9V4wMiDYcN0OCFdH4vgZ55U6Jfx5sY6w3vA#introduction" target="_blank"> Introduction</a> </li>
-        <li><a href="https://c4e-d17.netlify.app/?fbclid=IwAR3DyTE7KCoy2OWXa0boSNJT9V4wMiDYcN0OCFdH4vgZ55U6Jfx5sY6w3vA#habitat" target="_blank"> Habitat</a> </li>
-        <li><a href="https://c4e-d17.netlify.app/?fbclid=IwAR3DyTE7KCoy2OWXa0boSNJT9V4wMiDYcN0OCFdH4vgZ55U6Jfx5sY6w3vA#media" target="_blank"> Media</a> </li>
-    </ul>
-    <h1> About Brown Bears </h1> 
-    <p>The brown bear (Ursus arctos) is native to parts of northern Eurasia and North America. Its conservation status is currently Least Concern.
-
-        There are many subspecies within the brown bear species, including the Atlas bear and the Himalayan brown bear.</p>
-    <a href="https://en.wikipedia.org/wiki/Brown_bear" target="_blank"> Learn More</a>
-    <h2> Species </h2>
-    <ul>
-        <li> Arctos </li>
-        <li> Collarus </li>
-        <li> Horribilis </li>
-        <li> Nelsoni (extinct) </li>
-    </ul>
-    <h2> Features </h2>
-    <p>Brown bears are not always completely brown. Some can be reddish or yellowish. They have very large, curved claws and huge paws. Male brown bears are often 30% larger than female brown bears. They can range from 5 feet to 9 feet from head to toe.</p>
-    <h1>Habitat</h1>
-    <h2> Countries with Large Brown Bear Populations</h2>
-    <ol>
-        <li> Russia </li>
-        <li> United States </li>
-        <li> Canada </li>
-    </ol>
-    <h2> Countries with Small Brown Bear Populations</h2>
-    <p>Some countries with smaller brown bear populations include Armenia, Belarus, Bulgaria, China, Finland, France, Greece, India, Japan, Nepal, Poland, Romania, Slovenia, Turkmenistan, and Uzbekistan.</p>
-    <h1>Media</h1>
-    <img src="https://s3.amazonaws.com/codecademy-content/courses/web-101/web101-image_brownbear.jpg" alt="Brown Bear">
-    <video src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-1/lesson-2/htmlcss1-vid_brown-bear.mp4" controls ="1" autoplay= "0"></video>
-</body>
-</html> -->
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="index.css">
-</head>
+    <title>hello</title>
+    <link rel="stylesheet" href="index.css">    
 <body>
-    <div>toidicodcao</div>
-    <h1 id="hellofans" class ="hello white">hello fans</h1>
-    <p class= "hello white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium maxime cum magni possimus? Quam, et necessitatibus pariatur, beatae vel eligendi sit iusto harum modi, omnis corrupti unde? Amet, fuga enim.</p>
-    <a href="https://www.youtube.com/watch?v=quCKid6JZn8"> relax </a>
-    <input type= "password">
-    <input type= "username">
-    <nav>
-        <a href="https://xuanthulab.net/thuoc-tinh-font-size-font-style-font-weight-font-variant.html">enjoy your life</a>
-    </nav>
-    <button>
-    clikc me </button>
+
+    <div class="header"> Header</div>
+    <table class="style">
+        <tr>
+            <td>table Data</td>
+            <td>table Data</td>
+            <td>table Data</td>
+        </tr>
+    </table>
+
 </body>
 </html>
