--- a/function/index.html
+++ b/function/index.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="index.js"></script>
 </head>
 <body>
- <h1>xin chao friend</h1>
- chuc mot ngay tot lanh
- <h2>code tốt nha </h2>
- coding is very fun
- <script src="script.js"> </script>
+    <h1>Hello friends</h1>
+    <h1 onclick="xinchao()">Hello Mind</h1>
 </body>
 </html>
