--- a/startup/index.html
+++ b/startup/index.html
@@ -42,6 +42,7 @@
         </div>
      </form>
      <footer class="footer">
+        <div class="foot">
         <div class ="part1">
         <div class ="part2">
             <h5>About Us</h5>
@@ -49,7 +50,7 @@
                 <li><a href="#">MindX School</a></li>
                 <li><a href= "#">Get Over X</a></li>
                 <li><a href ="#">NauqDesign</a></li>
-                <li><a href ="#">Help</a></li>
+                <li><a href ="#">Help</a></li> 
             </ul>
         </div>
         <div class = "part2">
@@ -60,7 +61,7 @@
                 <li><a href ="#">Legal</a></li>
             </ul>
         </div>
-        <div class="logofooter">
+        <div class="logofoot">
             <h3><img src="./img/footerlogo.png.png" alt="1"></h3>    
             <p>by mindX</p>        
         </div>
@@ -78,6 +79,7 @@
         <div class= "end">
         <p>© 2019 Get Over X Company privacy policy - terms and conditions.</p>
         </div>
+    </div>
     </footer>
 </body>
 </html>
