--- a/PaperRockScissors/index.html
+++ b/PaperRockScissors/index.html
@@ -4,9 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game</title>
-    <h1> Rock Paper Scisssor </h1>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div class=" score-board"></div>
+    <header>
+        <h1> Rock Paper Scisssor</h1>
+    </header>
+
+    <div class=" score-board">
+        <div id="user-label" class="badge">user</div>
+        <div id="computer-label" class="badge"> comp</div>
+        <span id="user-score">0</span> : <span id="computer-score">0</span>
+    </div>
+<div class="result">
+    <p> Paper cover rock. You win!!</p>
+</div>
+<div class="choices">
+    <div class="choice" id="p">
+        <img src="https://img.icons8.com/ios-filled/50/000000/hand.png"/>
+</div>
+    <div class="choice" id="s">
+        <img src="https://img.icons8.com/ios-glyphs/60/000000/hand-scissors.png"/>
+    </div>
+    <div class="choice" id="r"> 
+        <img src="https://img.icons8.com/ios-filled/50/000000/hand-rock.png"/>
+    </div>
+</div>
+<p id="action-message">Make your move</p>
+<script src="index.js"></script>
+
 </body>
 </html>
+
+
